Add Word reporting

--- a/automate.ipynb
+++ b/automate.ipynb
@@ -1019,7 +1019,282 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Next: Create Doc report"
+    "## Next: Create Doc report\n",
+    "\n",
+    "https://python-docx.readthedocs.io/en/latest/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from docx import Document\n",
+    "from docx.shared import Cm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.text.paragraph.Paragraph at 0x1926fec5d60>"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document = Document()\n",
+    "\n",
+    "document.add_heading('Report on Excel and Word automation', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p = document.add_paragraph('This report will cover how to automate ')\n",
+    "p.add_run('Excel').bold = True\n",
+    "p.add_run(' and ')\n",
+    "p.add_run('Word.').italic = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.text.paragraph.Paragraph at 0x1926fec5670>"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document.add_heading('Excel automation', level=1)\n",
+    "document.add_paragraph('“Writing code accounts for 90 percent of programming. Debugging code accounts for the other 90 percent.”', style='Intense Quote')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.text.paragraph.Paragraph at 0x1926fedabb0>"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document.add_paragraph(\n",
+    "    'first item in unordered list', style='List Bullet'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.text.paragraph.Paragraph at 0x1926fee4c40>"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document.add_paragraph(\n",
+    "    'first item in ordered list', style='List Number'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<docx.shape.InlineShape at 0x1925f54dca0>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "document.add_picture('immo_chart.png',width=Cm(16))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>surface_reelle_bati</th>\n",
+       "      <th>valeur_fonciere</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>31</td>\n",
+       "      <td>95000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>43</td>\n",
+       "      <td>545000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18</td>\n",
+       "      <td>220000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>25</td>\n",
+       "      <td>132500.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>75</td>\n",
+       "      <td>590000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   surface_reelle_bati  valeur_fonciere\n",
+       "0                   31          95000.0\n",
+       "1                   43         545000.0\n",
+       "2                   18         220000.0\n",
+       "3                   25         132500.0\n",
+       "4                   75         590000.0"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel(\"dvf14_chart.xlsx\",sheet_name = \"Sheet2\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "table = document.add_table(rows=1, cols=3)\n",
+    "hdr_cells = table.rows[0].cells\n",
+    "hdr_cells[0].text = 'index'\n",
+    "hdr_cells[1].text = df.columns[0]\n",
+    "hdr_cells[2].text = df.columns[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 31, 95000.),\n",
+       " (1, 43, 545000.),\n",
+       " (2, 18, 220000.),\n",
+       " (3, 25, 132500.),\n",
+       " (4, 75, 590000.)]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "records = df.to_records()\n",
+    "result = list(records)\n",
+    "result[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add data to the table\n",
+    "for qty, id, desc in result[0:5]:\n",
+    "    row_cells = table.add_row().cells\n",
+    "    row_cells[0].text = str(qty)\n",
+    "    row_cells[1].text = str(id)\n",
+    "    row_cells[2].text = str(desc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# document.add_page_break()\n",
+    "\n",
+    "document.save('dvf14_report.docx')"
    ]
   }
  ],
